@@ -1,0 +1,1 @@
+package ifneeded chasingarrowselem 0.2 [list load [file join $dir chasingarrowselem0.2.dylib]]
